# aviasales_test_task_parser

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
flight_parser/: parser.py
flight_parser/scripts/: flight_parse.py
tests/: test_flight_parser.py
tests/fixtures/: xml_file_with_one_flight.xml  xml_file_with_one_flight_with_added_flight.xml
