[tool.poetry]
name = "aviasales_test_task_parser"
version = "0.1.0"
description = ""
authors = ["ilnarkz <ilnar-16_04@mail.ru>"]
packages = [
  { include = "flight_parser" },
]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
get_flight = "flight_parser.scripts.flight_parse:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
